test/scc/decl/semantic-errors/039.a
039.t:1:14: error: invalid use of 'restrict'